# neuvision

./: .clang-format  .gitattributes  .gitignore  .travis.yml  Brewfile  CMakeLists.txt  NEUVision.pri  NEUVision.pro  README.md  Z3DMultiCameraCalibration.pro  Z3DScanner.pro  appveyor.yml  contributors.txt  vcpkg.json
apps/Z3DCameraCalibration/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/Z3DCloudViewer/: CMakeLists.txt  main.cpp  qml.qrc  zmeshlabutils.cpp  zmeshlabutils.h  zpointcloudviewercontroller.cpp  zpointcloudviewercontroller.h
apps/Z3DCloudViewer/qml/: Environment.qml  PointCloudListDelegate.qml  ZFastBlur.qml  main.qml
apps/Z3DCloudViewer/resources/: Info.plist
apps/Z3DMultiCameraCalibration/: CMakeLists.txt  main.cpp
apps/Z3DScanner/: CMakeLists.txt  resources.qrc
apps/Z3DScanner/lib/: lib.pro
apps/Z3DScanner/qml/: PointCloudListDelegate.qml  ZFastBlur.qml  main.qml
apps/Z3DScanner/src/: main.cpp  zscannerqml.cpp  zscannerqml.h
apps/Z3DScanner/utils/: generateProjectorImages.m  generateTextures.m
lib/zcalibratedcamera/: CMakeLists.txt  zcalibratedcamera.pri  zcalibratedcamera.pro
lib/zcalibratedcamera/include/: Z3DCalibratedCamera
lib/zcalibratedcamera/src/: Z3DCalibratedCamera  src.pro  zcalibratedcamera.cpp  zcalibratedcamera.h  zcalibratedcamera_fwd.h  zcalibratedcamera_global.h  zcalibratedcameraprovider.cpp  zcalibratedcameraprovider.h
lib/zcameraacquisition/: CMakeLists.txt  zcameraacquisition.pri
lib/zcameraacquisition/include/: Z3DCameraAcquisition
lib/zcameraacquisition/plugins/: CMakeLists.txt  plugins.pro
lib/zcameraacquisition/src/: Z3DCameraAcquisition  Z3DCameraInterface  Z3DCameraProvider  resources.qrc  src.pro  zcameraacquisition_global.h  zcameraframesrecorder.cpp  zcameraframesrecorder.h  zcameraimage.cpp  zcameraimage.h  zcamerainfo.cpp  zcamerainfo.h  zcamerainterface.h  zcamerainterface_p.cpp  zcamerainterface_p.h  zcameralistmodel.cpp  zcameralistmodel.h  zcameraplugininterface.cpp  zcameraplugininterface.h  zcamerapreviewer.cpp  zcamerapreviewer.h  zcamerapreviewer.ui  zcameraprovider.cpp  zcameraprovider.h  zcameraselectordialog.cpp  zcameraselectordialog.h  zcameraselectordialog.ui  zcameraselectorwidget.cpp  zcameraselectorwidget.h  zcameraselectorwidget.ui  zcamerasettingswidget.cpp  zcamerasettingswidget.h  zcamerasettingswidget.ui  zimageviewer.cpp  zimageviewer.h  zimageviewwidget.cpp  zimageviewwidget.h
lib/zcameracalibration/: CMakeLists.txt  zcameracalibration.pri  zcameracalibration.pro
lib/zcameracalibration/include/: Z3DCameraCalibration
lib/zcameracalibration/plugins/: plugins.pro
lib/zcameracalibration/src/: Z3DCameraCalibration  Z3DCameraCalibrationProvider  src.pro  zcameracalibration.cpp  zcameracalibration.h  zcameracalibration_fwd.h  zcameracalibration_global.h  zcameracalibrationplugininterface.cpp  zcameracalibrationplugininterface.h  zcameracalibrationprovider.cpp  zcameracalibrationprovider.h  zcameracalibrator.h  zmulticameracalibration.cpp  zmulticameracalibration.h  zmulticameracalibrator.h
lib/zcameracalibrator/: CMakeLists.txt  zcameracalibrator.pri  zcameracalibrator.pro
lib/zcameracalibrator/finders/: CMakeLists.txt  finders.pro
lib/zcameracalibrator/src/: src.pro  zcalibrationdistortionplot.cpp  zcalibrationdistortionplot.h  zcalibrationdistortionplotdata.cpp  zcalibrationdistortionplotdata.h  zcalibrationimage.cpp  zcalibrationimage.h  zcalibrationimagemodel.cpp  zcalibrationimagemodel.h  zcalibrationimageviewer.cpp  zcalibrationimageviewer.h  zcalibrationpatternfinder.cpp  zcalibrationpatternfinder.h  zcalibrationpatternfinderplugininterface.h  zcalibrationpatternfinderprovider.cpp  zcalibrationpatternfinderprovider.h  zcameracalibrator_fwd.h  zcameracalibrator_global.h  zcameracalibratorwidget.cpp  zcameracalibratorwidget.h  zcameracalibratorwidget.ui  zcameracalibratorworker.cpp  zcameracalibratorworker.h  zmulticalibrationimage.cpp  zmulticalibrationimage.h  zmulticalibrationimagemodel.cpp  zmulticalibrationimagemodel.h  zmulticameracalibratorwidget.cpp  zmulticameracalibratorwidget.h  zmulticameracalibratorwidget.ui  zmulticameracalibratorworker.cpp  zmulticameracalibratorworker.h
lib/zcore/: CMakeLists.txt  zcore.pri
lib/zcore/src/: qqmlobjectlistmodel.cpp  qqmlobjectlistmodel.h  src.pro  zapplication.cpp  zapplication.h  zapplicationstyle.cpp  zapplicationstyle.h  zcore_fwd.h  zcore_global.h  zcoreplugin.cpp  zcoreplugin.h  zloghandler_p.cpp  zloghandler_p.h  zpluginloader.cpp  zpluginloader.h  zsettingsitem.cpp  zsettingsitem.h
lib/zgui/: CMakeLists.txt  zgui.pri
lib/zgui/src/: osxutils.h  osxutils.mm  src.pro  zapplication.cpp  zapplicationstyle.cpp  zapplicationstyle.h  zgui_global.h  zmainwindow.cpp  zmainwindow.h  zosxutils.h  zosxutils.mm  zwidget.cpp  zwidget.h
lib/zpointcloud/: CMakeLists.txt  zpointcloud.pri  zpointcloud.pro  zpointcloud_resources.qrc
lib/zpointcloud/plugins/: CMakeLists.txt  plugins.pro
lib/zpointcloud/src/: Z3DPointCloud  src.pro  zcameracontroller.cpp  zcloudview.cpp  zcloudview.h  zcloudview.ui  zcloudviewwindow.cpp  zcloudviewwindow.h  zcloudviewwindow.ui  zpointcloud.cpp  zpointcloud.h  zpointcloud_fwd.h  zpointcloud_global.h  zpointcloud_io.cpp  zpointcloud_qml.cpp  zpointcloud_resources.qrc  zpointcloud_typedefs.h  zpointcloudgeometry.cpp  zpointcloudgeometry.h  zpointcloudlistitem.cpp  zpointcloudlistitem.h  zpointcloudlistmodel.cpp  zpointcloudlistmodel.h  zpointcloudplugininterface.cpp  zpointcloudplugininterface.h  zpointcloudprovider.cpp  zpointcloudprovider.h  zpointcloudreader.cpp  zpointcloudreader.h  zpointfield.cpp  zpointfield.h
lib/zstructuredlight/: CMakeLists.txt  zstructuredlight.pri  zstructuredlight.pro
lib/zstructuredlight/patterns/: CMakeLists.txt  patterns.pro
lib/zstructuredlight/slsystems/: CMakeLists.txt  slsystems.pro
lib/zstructuredlight/src/: Z3DStructuredLight  resources.qrc  src.pro  zbinarypatterndecoder.h  zbinarypatternprojection.cpp  zbinarypatternprojection.h  zcameraacquisitionmanager.cpp  (+27 more)
tests/zcore/: CMakeLists.txt  tst_zsettingsitem.cpp
(+468 files in other folders)
