add_subdirectory(zopencvvideocapture)
add_subdirectory(zqtcamera)
add_subdirectory(zsimulatedcamera)

find_package(Vimba QUIET)
if(VIMBA_FOUND)
    message("-- Found AVT Vimba SDK in " ${VIMBA_INCLUDE_DIRS})
    add_subdirectory(zavtvimba)
else()
    message("-- AVT Vimba camera acquisition plugin disabled. Set AVT_VIMBA_DIR if the SDK was installed in a non-default location")
endif()

find_package(GPhoto2 QUIET)
if(GPHOTO2_FOUND)
    message("-- Found GPhoto2 version " ${GPHOTO2_VERSION_STRING} " in " ${Gphoto2_INCLUDE_DIRS})
    add_subdirectory(zlibgphoto2)
else()
    message("-- GPhoto2 camera acquisition plugin disabled.")
endif()

find_package(Pylon QUIET)
if(PYLON_FOUND)
    message("-- Found Pylon SDK in " ${PYLON_INCLUDE_DIRS})
    add_subdirectory(zpylon)
else()
    message("-- Pylon camera acquisition plugin disabled. Set PYLON_DEV_DIR if the SDK was installed in a non-default location")
endif()
